<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_question_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:text="@string/question_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:text="@string/question_author"
        android:textColor="#313030"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_see_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_style"
        android:text="@string/check"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_answers"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_style"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</LinearLayout>