<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/input_view_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_nickName"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_nickname"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/bt_change_nickName"
            android:layout_width="14dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/tv_my_vip"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/membership"
            android:textColor="#FA9619"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_view_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_follows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_follows"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_follow_number"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/count"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_view_follows"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/item_button_style"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_view_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_supports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_supports"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_support_number"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/count"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_view_supports"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/item_button_style"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_view_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_questions"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_question_number"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/count"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_view_questions"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/item_button_style"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_view_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/my_answers"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_answer_number"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/count"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_view_answers"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/item_button_style"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>