<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="34dp"
        android:text="@string/account"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_no_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:background="@drawable/button_style"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/tv_account"
        android:layout_toRightOf="@+id/tv_account"
        android:background="@drawable/input_view_border"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/title_questions_and_answers"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/no_account"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/tv_no_account"
        android:layout_toRightOf="@+id/tv_no_account"
        android:background="#FFFFFF"
        android:stateListAnimator="@null"
        android:text="@string/register_now"
        android:textColor="#3C8ABD" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_account"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="42dp"
        android:layout_toEndOf="@+id/tv_password"
        android:layout_toRightOf="@+id/tv_password"
        android:background="@drawable/input_view_border"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>