<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel_search"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_show_tag"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/show_tag"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_show_search"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_questions"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>