<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_cancel_question"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/button_style"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_post_question"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_style"
        android:text="@string/post_question"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_input_question"
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_below="@+id/bt_cancel_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/input_view_border"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/input_question"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_add_tag"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="@drawable/button_style"
        android:text="@string/add_tag"
        android:textColor="#000000"
        android:textSize="20sp" />
</RelativeLayout>