<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="85dp"
        android:text="@string/phone"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="29dp"
        android:text="@string/message"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rbt_comfirm_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="27dp"
        android:text="确认阅读并同意协议" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="74dp"
        android:layout_toEndOf="@+id/tv_phone_number"
        android:layout_toRightOf="@+id/tv_phone_number"
        android:background="@drawable/input_view_border"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_below="@+id/et_phone_number"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/tv_message"
        android:layout_toRightOf="@+id/tv_message"
        android:background="@drawable/input_view_border"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_get_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_number"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/et_message"
        android:layout_toRightOf="@+id/et_message"

        android:text="@string/get_message" />

    <Button
        android:id="@+id/bt_register_next"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_private_policy"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:background="@drawable/button_style"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_private_policy"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/bt_get_message"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:stateListAnimator="@null"
        android:layout_toEndOf="@+id/rbt_comfirm_agreement"
        android:layout_toRightOf="@+id/rbt_comfirm_agreement"
        android:text="@string/private_policy"
        android:textColor="#838080"/>

</RelativeLayout>