<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_input_answer"
        android:layout_width="wrap_content"
        android:layout_height="352dp"
        android:layout_below="@+id/tv_click_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/view_border"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_click_question"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_below="@+id/bt_cancel_answer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:text="@string/question_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_cancel_answer"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_style"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_post_answer"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_style"
        android:text="@string/post"
        android:textSize="20sp" />
</RelativeLayout>